# jupyter-education

./: .gitignore  Dockerfile  Fetcher.ipynb  README.md  comp116.py  pyproject.toml  start-jupyter-edu.sh
saml/: settings.json
src/: Fetcher.ipynb  auth.py
